[tool.poetry]
name = "data_visulization"
version = "0.1.0"
description = ""
authors = ["shahd1995913 <shahdalkhatib95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
